# ask_llm

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: errors.yml
.readme_assets/: usage.md
docs/.readme_assets/: description.md  other.md
examples/: async.rs  codeblocks.rs  file_attachment.rs  force_json.rs  translate.rs
src/: blocking.rs  claude.rs  config.rs  lib.rs  main.rs  ollama.rs  shortcuts.rs
