cargo-features = ["codegen-backend"]
[package]
name = "ask_llm"
version = "2.0.0"
license = "MIT"
description = "make a request to whatever llm is the best these days, without hardcoding model/provider"
documentation = "https://github.com/valeratrades/ask_llm/tree/master/README.md"
homepage = "https://github.com/valeratrades/ask_llm"
repository = "https://github.com/valeratrades/ask_llm"
readme = "README.md"
edition = "2024"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[[bin]]
name = "ask_llm"
path = "./src/main.rs"
required-features = ["cli"]
#,}}}

[features]
cli = ["dep:clap"]

default = ["cli"]
full = ["cli"]

[dependencies]
base64 = "0.22"
bytes = "1.10.1"
color-eyre = "^0.6.3"
derive-new = "^0"
derive_more = { version = "2.0.1", features = ["from", "display", "deref", "deref_mut", "debug", "from_str"] }
eyre = "0.6.12"
futures = "0.3.31"
reqwest = { version = "0.12.14", features = ["blocking", "json", "stream", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
v_utils = { version = "2.6.2", features = ["cli"] }

# Optional {{{
clap = { version = "^4.5.32", features = ["derive"], optional = true }

[lints.clippy]
# Stable
float_cmp = "allow" # is bad for `==` direct comparisons, but `<` and `>` should be allowed
len_zero = "allow" # `.empty()` is O(1) but on &str only
undocumented_unsafe_blocks = "warn"
tabs_in_doc_comments = "allow"

# Questionable
# const fns, so actually more performant
get_first = "allow"
get_last_with_len = "allow"

[[example]]
name = "async"
path = "examples/async.rs"

[[example]]
name = "codeblocks"
path = "examples/codeblocks.rs"

[[example]]
name = "force_json"
path = "examples/force_json.rs"

[[example]]
name = "file_attachment"
path = "examples/file_attachment.rs"
