cargo-features = ["codegen-backend"]
[package]
name = "ask_llm"
version = "2.1.5"
license = "MIT"
description = "make a request to whatever llm is the best these days, without hardcoding model/provider"
documentation = "https://github.com/valeratrades/ask_llm/tree/master/README.md"
homepage = "https://github.com/valeratrades/ask_llm"
repository = "https://github.com/valeratrades/ask_llm"
readme = "README.md"
edition = "2024"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[[bin]]
name = "ask_llm"
path = "./src/main.rs"
required-features = ["cli"]
#,}}}

[features]
cli = ["dep:clap"]

default = ["cli"]
full = ["cli"]

[dependencies]
base64 = "0.22"
bytes = "1.11.0"
color-eyre = "^0.6.5"
derive-new = "^0"
derive_more = { version = "2.1.1", features = ["from", "display", "deref", "deref_mut", "debug", "from_str"] }
eyre = "0.6.12"
futures = "0.3.31"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "stream", "rustls-tls", "charset", "http2", "system-proxy"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
v_utils = { version = "^2.15.9", features = ["cli"] }

# Optional {{{
clap = { version = "^4.5.53", features = ["derive"], optional = true }
miette = { version = "7.6.0", features = ["fancy", "syntect-highlighter", "serde"] }

[lints.clippy]
# Stable
float_cmp = "allow" # is bad for `==` direct comparisons, but `<` and `>` should be allowed
len_zero = "allow" # `.empty()` is O(1) but on &str only
undocumented_unsafe_blocks = "warn"
tabs_in_doc_comments = "allow"

# Questionable
# const fns, so actually more performant
get_first = "allow"
get_last_with_len = "allow"

[[example]]
name = "async"
path = "examples/async.rs"

[[example]]
name = "codeblocks"
path = "examples/codeblocks.rs"

[[example]]
name = "force_json"
path = "examples/force_json.rs"

[[example]]
name = "file_attachment"
path = "examples/file_attachment.rs"
